# datum-connect

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  env.example  flake.nix  package-lock.json
.github/workflows/: bundle.yml  ci.yml  manual-release.yml  publish-docker.yml
assets/: tailwind.css
assets/styling/: main.css
cli/: Cargo.toml
cli/src/: dns_dev.rs  main.rs  tunnel_dev.rs
docs/: connector-e2e-flow.md  connector-envoy-design.md  gateway-architecture.md  heartbeat-agent.md  nso-connector-work.md  pcp-auth-session-architecture.md
lib/: Cargo.toml
lib/examples/: login.rs
lib/src/: auth.rs  config.rs  datum_cloud.rs  domains.rs  encoding.rs  gateway.rs  heartbeat.rs  http_server.rs  lib.rs  node.rs  project_control_plane.rs  repo.rs  state.rs  tests.rs  tunnels.rs  update.rs
lib/src/datum_apis/: connector.rs  connector_advertisement.rs  connector_class.rs  http_proxy.rs  lease.rs  mod.rs
lib/src/datum_cloud/: auth.rs  env.rs
lib/src/gateway/: metrics.rs  parse.rs
lib/static/: gateway_not_found.html
lib/tests/auth/: 01_tcp_443.config.yml  01_tcp_443.fixtures.json
n0des-local/: Cargo.toml  README.md
n0des-local/src/: lib.rs  main.rs
scripts/: try-ui-demo.sh
src/: main.rs  state.rs
src/components/: button.rs  domains.rs  head.rs  hero.rs  mod.rs  splash.rs
src/node/: mod.rs  node.rs
src/views/: create_proxy.rs  domains_list.rs  home.rs  join_proxy.rs  mod.rs  navbar.rs  proxies_list.rs
tools/: tunnel_demo_server.py
ui/: Cargo.toml  Dioxus.toml  README.md  entitlements.plist  package-lock.json  package.json  tailwind.config.js  tailwind.css  theme.css
ui/assets/: tailwind.css
ui/assets/bundle/macos/: Datum.icns
ui/assets/icons/: README.md
ui/assets/styling/: fonts.css  main.css  proxy.css
ui/src/: main.rs  state.rs  util.rs
ui/src/components/: add_tunnel_dialog.rs  bandwidth_timeseries_chart.rs  button.rs  delete_tunnel_dialog.rs  domains.rs  head.rs  icon.rs  invite_user_dialog.rs  mod.rs  select_dropdown.rs  splash.rs  typography.rs  update_dialog.rs
ui/src/components/dialog/: component.rs
ui/src/components/dropdown_menu/: component.rs
ui/src/components/input/: component.rs
ui/src/components/select/: component.rs
ui/src/components/skeleton/: component.rs
ui/src/components/switch/: component.rs
ui/src/views/: create_domain.rs  create_proxy.rs  domains_list.rs  edit_proxy.rs  join_proxy.rs  login.rs  mod.rs  navbar.rs  proxies_list.rs  select_project.rs  settings.rs  signup.rs  tunnel_bandwidth.rs
