[workspace]
members = [
  "cli",
  "lib",
  "n0des-local",
  "ui"
]
resolver = "2"

[workspace.dependencies]
iroh-proxy-utils = { git = "https://github.com/n0-computer/iroh-proxy-utils", branch = "deps/iroh-096" }
lib = { path = "lib" }
arc-swap = "1.8.0"
axum = "0.7"
chrono = { version = "0.4", features = ["clock"] }
derive_more = { version = "2.1.1", features = ["display"] }
dotenv = "0.15"
dirs-next = "2"
http-body-util = "0.1.3"
snafu = "0.8.6"
hex = "0.4.3"
hyper = "1"
hyper-util = { version = "0.1.19", features = ["full"] }
iroh = { version = "0.96", default-features = false }
iroh-relay = { version = "0.96", default-features = false }
iroh-base = { version = "0.96" }
iroh-tickets = "0.3"
iroh-metrics = "0.38"
iroh-n0des = { version = "0.9", features = ["tickets"] }
log = "0.4"
open = "5"
openidconnect = "4.0.1"
postcard = "1"
rand = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
tower = "0.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2"
data-encoding = "2.9.0"
n0-error = { version = "0.1", features = ["anyhow"] }
n0-future = "0.3"
uuid = { version = "1.18.1", features = ["v4"] }
url = "2"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

# [patch."https://github.com/n0-computer/iroh-proxy-utils"]
# iroh-proxy-utils = { path = "../iroh-proxy-utils" }
