[package]
name = "datum-connect"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv.workspace = true
lib.workspace = true
n0-error.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.5.50", features = ["derive", "env"] }
tracing.workspace = true
tokio-util.workspace = true
