[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = { workspace = true, features = ["serde"] }
axum.workspace = true
chrono.workspace = true
data-encoding.workspace = true
derive_more.workspace = true
dirs-next.workspace = true
hex.workspace = true
hyper.workspace = true
iroh-base.workspace = true
iroh-n0des.workspace = true
iroh-proxy-utils.workspace = true
iroh-tickets.workspace = true
iroh.workspace = true
log.workspace = true
n0-error.workspace = true
n0-future.workspace = true
open.workspace = true
openidconnect.workspace = true
postcard.workspace = true
quinn.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
snafu.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
iroh-blobs = "0.97.0"
clap = { version = "4.5.54", features = ["env"] }
httparse = "1.10.1"
unicase = "2.9.0"
notify = "8.2.0"
ttl_cache = "0.5.1"
tinytemplate = "1.2.1"
askama = "0.15.1"

[dev-dependencies]

[features]
default = ["server"]
server = []
