[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = { workspace = true, features = ["serde"] }
axum.workspace = true
chrono.workspace = true
data-encoding.workspace = true
derive_more.workspace = true
dirs-next.workspace = true
hex.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
iroh-base.workspace = true
iroh-n0des.workspace = true
iroh-proxy-utils.workspace = true
iroh-tickets.workspace = true
iroh.workspace = true
iroh-relay.workspace = true
log.workspace = true
n0-error.workspace = true
n0-future.workspace = true
open.workspace = true
openidconnect.workspace = true
postcard.workspace = true
quinn.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
secrecy = "0.10.3"
snafu.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
iroh-blobs = "0.97.0"
httparse = "1.10.1"
ttl_cache = "0.5.1"
askama = "0.15.1"
k8s-openapi = { version = "0.26.1", features = ["v1_30"] }
kube = { version = "2.0.1", default-features = false, features = ["client", "derive", "rustls-tls"] }
gateway-api = "0.19.0"
gethostname = "0.5"

[dev-dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
n0-tracing-test = "0.3.0"
n0des-local = { path = "../n0des-local" }
tempfile = "3"

[features]
default = ["server"]
server = []
