[package]
name = "n0des-local"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
iroh = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

irpc = "0.11"
irpc-iroh = "0.11"
iroh-n0des = { version = "0.8", features = ["tickets"] }

